# shepitnote

./: .gitignore  .hushnoterc.example  .shepitnoterc.example  CLAUDE.md  CONTRIBUTING.md  DIARIZATION.md  README.md  SETUP.md  apply_labels.py  cloud_transcribe.py  compress.sh  diarize.py  glossary.py  glossary.ru.txt.example  glossary.txt.example  glossary.uk.txt.example  hushnote  label.py  meeting_ui.py  merge_diarization.py  merge_tracks.py  migrate_recordings.sh  pyproject.toml  record_audio.sh  roster.txt.example  setup.sh  shepitnote  speaker_guess.py  summarize.py  transcribe.py
docs/: AUDIO.md  CLOUD.md  DIARIZATION.md  LANGUAGE.md  PUBLISHING.md  SETUP.md
hooks/: confluence_publish.py  publish.py  slack_publish.py
tests/: test_cloud_transcribe.py  test_confluence_publish.py  test_meeting_ui.py  test_merge_tracks.py  test_normalize_language.py  test_publish_dispatcher.py  test_slack_publish.py  test_speaker_guess.py  test_summarize.py  test_transcribe_kwargs.py
