[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shepitnote"
version = "0.2.0"
description = "Privacy-first meeting transcription and voice-to-text tool for Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0",
    "huggingface-hub",
    "requests",
]

[project.optional-dependencies]
diarize = [
    "pyannote.audio",
    "torch",
]
gpu = [
    "torch",
    # Install the CUDA variant manually if needed:
    # pip install torch --index-url https://download.pytorch.org/whl/cu121
]
all = [
    "shepitnote[diarize,gpu]",
]

[project.urls]
Homepage = "https://github.com/yuriytkach/shepitnote"
Issues = "https://github.com/yuriytkach/shepitnote/issues"
